--- a/templates/map_search.html
+++ b/templates/map_search.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<h1>{{ title }}</h1>
+<h1>{{ subtitle }}</h1>
 {{ message | cr }}
 <br/>
     <form action="/" method="post">
