--- a/templates/map_search.html
+++ b/templates/map_search.html
@@ -12,6 +12,7 @@
         </p>
         <p>距離(レストランの場合のみ)
         <select name="sel">
+            <option value=200>選択してください</option>
             <option value=200>200m</option>
             <option value=500>500m</option>
             <option value=1000>1km</option>
